--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
 </div>
 
 <script>
-    // Координати базових станцій
     const baseStations = {
         "source_1": { x: 0, y: 0, receivedAt: null },
         "source_2": { x: 0, y: 100, receivedAt: null },
@@ -92,7 +91,6 @@
 
     const socket = new WebSocket('ws://localhost:4002');
 
-    // WebSocket події
     socket.onopen = () => {
         console.log("LORAN WebSocket Connected");
         fetchConfiguration();
@@ -102,20 +100,16 @@
 
     socket.onmessage = (event) => {
         const message = JSON.parse(event.data);
-        console.log("Received message:", message); // додано для перевірки даних
+        console.log("Received message:", message);
         if (message.sourceId && message.receivedAt) {
-            // Оновлення часу отримання сигналу для відповідної базової станції
             baseStations[message.sourceId].receivedAt = message.receivedAt;
 
-            // Перевірка, чи всі базові станції отримали сигнал
             if (Object.values(baseStations).every(station => station.receivedAt)) {
                 const [base1, base2, base3] = Object.values(baseStations);
 
-                // Розрахунок різниць у часі отримання сигналів
                 const delta_t12 = (base1.receivedAt - base2.receivedAt) / 1000;
                 const delta_t13 = (base1.receivedAt - base3.receivedAt) / 1000;
 
-                // Обчислення положення об'єкта методом найменших квадратів
                 const result = estimatePositionWithLeastSquares(base1, base2, base3, delta_t12, delta_t13, 300000);
                 if (result) {
                     objectPosition = result;
@@ -129,7 +123,6 @@
         }
     };
 
-    // Функція для отримання початкової конфігурації
     function fetchConfiguration() {
         axios.get('http://localhost:4002/config')
             .then(response => {
@@ -143,12 +136,11 @@
             .catch(error => console.error("Error fetching configuration:", error));
     }
 
-    // Застосування нових налаштувань
     function applySettings() {
         objectSpeed = parseFloat(document.getElementById('objectSpeed').value);
         emulationZoneSize = parseFloat(document.getElementById('zoneSize').value);
 
-        console.log("New settings:", objectSpeed, emulationZoneSize); // додано для перевірки
+        console.log("New settings:", objectSpeed, emulationZoneSize);
 
         axios.post('http://localhost:4002/config', {
             objectSpeed,
@@ -158,7 +150,6 @@
             .catch(error => console.error('Error updating configuration:', error));
     }
 
-    // Функція оцінки позиції методом найменших квадратів
     function estimatePositionWithLeastSquares(base1, base2, base3, delta_t12, delta_t13, c) {
         const d1 = c * delta_t12;
         const d2 = c * delta_t13;
@@ -182,7 +173,7 @@
         return { x, y };
     }
 
-    // Оновлення графіку
+
     function updatePlot() {
         const baseStationData = Object.values(baseStations).map((station, index) => ({
             x: [station.x],
@@ -214,7 +205,6 @@
         });
     }
 
-    // Початкове відображення графіку
     updatePlot();
 </script>
 </body>
